Bug 137612 - showfoto doesn't refresh the photo preview when deleting a picture
Summary: showfoto doesn't refresh the photo preview when deleting a picture
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Showfoto-Workflow (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-11-20 11:59 UTC by Fabien
Modified: 2022-02-05 04:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabien 2006-11-20 11:59:17 UTC
Version:           0.4.0-svn (using KDE KDE 3.5.2)
Installed from:    Ubuntu Packages
OS:                Linux

To reproduce the problem :
Create a new dir and put 2 different pictures inside.

Open the dir containing the 2 pictures in showfoto  :
# showfoto newdir/*.jpg

choose the 1st one, press delete to remove it.
In the left sidebar, you will only see the 2nd one, but in the main window, you will still view the old one.

There's no way to view the 2nd picture !
If you press again delete, you will delete the 2nd picture although the main window still show the old one...


Maybe it has some links with this bug :
http://bugs.kde.org/show_bug.cgi?id=137491
Comment 1 caulier.gilles 2006-11-20 18:19:00 UTC
Fixed in svn...

Marcel: are you notified than BUG and CCBUGS tags in commit comments doesn't work ? It's very complex to manage B.K.O files like this.

Gilles