Showfoto from trunk : no need a Qtimer to dispatch change when removing a picture from the list. Call directly the slot instead.

BUG: 137612

svn path=/trunk/extragear/graphics/digikam/; revision=606463